[package]
name = "yew-query"
description = "A future data observer for yew"
keywords = ["wasm", "async"]
license = "MIT"
version = "0.1.0-alpha"
edition = "2021"

[dependencies]
yew = "0.19.3"
futures = "0.3.25"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["AbortController", "AbortSignal"] }
