[package]
name = "posts"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-query = { path = "../../packages/yew-query" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
wasm-logger = "0.2.0"
instant = { version = "0.1", features = ["wasm-bindgen", "inaccurate"] }

[workspace]